manifests/base/gateway/nginx/configs/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-ngf-to-fastapi
  namespace: backend-dev
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: nginx-gateway
  to:
  - group: ""
    kind: Service
    name: fastapi-service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-argocd
  namespace: argocd
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: nginx-gateway
  to:
  - group: ""
    kind: Service
    name: argocd-server
