manifests/base/gateway/nginx/configs/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: python
  namespace: nginx-gateway
spec:
  parentRefs:
  - name: my-ipv4-gateway
    namespace: nginx-gateway
    group: gateway.networking.k8s.io
    kind: Gateway
    sectionName: https
  hostnames:
  - "fastapi.imon.academy"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: fastapi-service
      namespace: backend-dev
      group: ""
      kind: Service
      port: 80
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: nginx-gateway
spec:
  parentRefs:
  - name: my-ipv4-gateway
    namespace: nginx-gateway
    group: gateway.networking.k8s.io
    kind: Gateway
    sectionName: https
  hostnames:
  - "argocd.imon.academy"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      namespace: argocd
      group: ""
      kind: Service
      port: 80
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: nginx-gateway
spec:
  parentRefs:
  - name: my-ipv4-gateway
    namespace: nginx-gateway
    group: gateway.networking.k8s.io
    kind: Gateway
    sectionName: https
  hostnames:
  - "grafana.imon.academy"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      namespace: monitoring
      group: ""
      kind: Service
      port: 80
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy-gateway
  namespace: nginx-gateway
spec:
  parentRefs:
  - name: my-ipv4-gateway
    namespace: nginx-gateway
    group: gateway.networking.k8s.io
    kind: Gateway
    sectionName: https
  hostnames:
  - "alloy-gateway.imon.academy"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: alloy-gateway
      namespace: alloy
      group: ""
      kind: Service
      port: 3100
      weight: 1
